
Package org.springframework.osgi.util
* fixed internal handling of nested beans when discovering transitive dependencies of a bean
* fixed internal handling of 'depends-on' beans when discovering transitive dependencies of a bean

Package org.springframework.osgi.test
* removed usage of PackageAdmin for resolving bundles
* improved testing behaviour so that user-defined properties override the system declared ones

Package org.springframework.osgi.web
* improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
* fixed problem with OsgiBundleXmlWebApplicationContext publishing null namespaces as OSGi properties
* DefaultContextPathStrategy supports SpringSource Application Platform's Web-ContextPath header
* introduced configuration property to web extender that allows deployed wars to be undeployed during shutdown
* improved war undeployment by adding a timeout and better shutdown synchronization
* improved handling of bundle locations given as URLs in DefaultContextPathStrategy
* improved DefaultContextPathStrategy structure to allow better subclassing
* changed extender configuration to META-INF/spring/extender to avoid confusion


Changes in version 1.1.0 M2 (2008-04-29)
----------------------------------------

General
* Spring 2.5.4+ required
* upgraded to Felix 1.0.4
* refined the web deployer API
* split web functionality into web and web-extender (symbolic name:org.springframework.bundle.osgi.web.extender) bundle
* added integration with Spring MVC
* added 'greedy-proxying' attribute to reference collections (spring-osgi.xsd)
* reduced the number of class loader instances generated internally by Spring-DM
* improved proxy infrastructure to avoid type leaks or the usage of spring-aop dynamic import

Package org.springframework.osgi.config
* removed usage of deprecated setSource method in AbstractReferenceDefinitionParser
* added support for 'greedy-proxying' attribute

Package org.springframework.osgi.context